# topoNN

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.org  README.rst  aa.py  main.cpp  main.py  pyproject.toml  requirements.in  requirements.txt  settings.py  wrapper.cpp
cmake-modules/: CorrectWindowsPaths.cmake  FindPETSc.cmake  FindPackageMultipass.cmake  ResolveCompilerPaths.cmake
ingest/generate/: data.py  mesh.py
lib/: CMakeLists.txt
lib/Plate/include/: plate.hpp  plate_rect.hpp
lib/Plate/src/: plate.cpp  plate_rect.cpp
lib/SolveFE/include/: element_routine.hpp  material_routine.hpp  solve.hpp  utility.hpp
lib/SolveFE/src/: element_routine.cpp  material_routine.cpp  solve.cpp
process/: __init__.py  element_routine.py  material_routine.py  neural_net.py  solve_fe.py  util.py
pythonlib/: __init__.py  dataGen.py  data_generate.py  elementRoutine.py  element_routine.py  errors.py  materialRoutine.py  material_routine.py  meshGen.py  mesh_generate.py  neuralNet.py  neuralNet1.py  solveFE2D.py  solveFE3D.py  solvefe_2d.py  solvefe_3d.py  typedef.py  util.py
tests/: CMakeLists.txt  test_meshGen.py  test_mesh_generate.py  test_neuralNet.py  test_neural_net.py  test_solveFE2D.py  test_solveFE3D.py  test_solve_fe.py  test_solvefe_2d.py  test_solvefe_3d.py
tests/test_Plate/: test_plate.cpp  test_plate_rect.cpp
